--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <!-- <py-repl></py-repl> -->
 
 
-    <script type="py" terminal worker>
+    <py-script type="py" terminal worker>
         import code
         code.interact()        
-    </script>
+    </py-script>
 
     <!-- Python code to be referenced -->
     <py-config>
