--- a/index.html
+++ b/index.html
@@ -17,17 +17,16 @@
     <p>Try running Python code here:</p>
     <!-- <py-repl></py-repl> -->
 
-
-    <py-script type="py" terminal worker>
-        import code
-        code.interact()        
-    </py-script>
-
     <!-- Python code to be referenced -->
     <py-config>
     </py-config>
 
     <py-script src="DigitalSignal/digital_signal.py"></py-script>
+
+    <script type="py-editor">
+        import sys
+        print(sys.version)
+    </script>
 
 </body>
 </html>
