--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PyScript REPL Example</title>
+    <title>PyScript REPL 1</title>
 
     <!-- PyScript CDN -->
     <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
@@ -28,6 +28,6 @@
         __terminal__.resize(40, 6)
         print("Lorem ipsum dolor sit amet consectetur, adipisicing elit. ")
     </script>
-    
+
 </body>
 </html>
